resources/deploy/eks/node/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${backendApp}
spec:
  selector:
    app: ${backendApp}
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${backendApp}
spec:
  selector:
    matchLabels:
      app: ${backendApp}
  replicas: 1
  template:
    metadata:
      labels:
        app: ${backendApp}
    spec:
      containers:
        - name: ${backendApp}
          image: ${registry}/${backendApp}-${project}:${backendTag}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
