resources/deploy/eks/node/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${${frontendApp}}
spec:
  selector:
    app: ${frontendApp}
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${frontendApp}
spec:
  selector:
    matchLabels:
      app: ${frontendApp}
  replicas: 1
  template:
    metadata:
      labels:
        app: ${frontendApp}
    spec:
      containers:
        - name: ${frontendApp}
          image: ${nodeRegistry}/${frontendApp}-${project}:${deployTag}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
